--- a/results.Rmd
+++ b/results.Rmd
@@ -67,4 +67,4 @@ The maximum snow depth recorded was `r cams[, max(Snow, na.rm = TRUE)]` cm in bo
 
 ## Twig and nutrient availability in relation to snow depth
 
-GAMs that modeled willow availability in response to snow depth found that low twigs decreased exponentially with snow, as expected, becoming 0% available at roughly 50 cm of snow, or the maximum height of the low twig category. Medium twigs showed an inverted, quadratic response, increasing in availability up to 30 cm of snow, after which availability decreased until they became nearly 0% available after around 75 cm of snow. The availability of high twigs was the most difficult to predict. These branches were easily pushed down by snow, and then covered quickly as snow continued to accumulate. As snow melted, they would become temporarily available for a few days before springing back up when enough snow melted. As a result, high twigs rarely surpased 50% in availability.
+GAMs that modeled willow availability in response to snow depth found that low twigs decreased exponentially with snow, as expected, becoming 0% available at roughly 50 cm of snow, or the maximum height of the low twig category. Medium twigs showed an inverted, quadratic response, increasing in availability up to 30 cm of snow, after which availability decreased until they became nearly 0% available after around 75 cm of snow. The availability of high twigs was the most difficult to predict. These branches were easily pushed down by snow, and then covered quickly as snow continued to accumulate. As snow melted, they would become temporarily available for a few days before springing back up when enough snow melted. As a result, high twigs rarely surpassed 50% in availability.
