--- a/results.Rmd
+++ b/results.Rmd
@@ -57,7 +57,7 @@ maxday23 <- means[winter == "2023-2024" & snowmean == max2324, mean(Date)]
 
 ## Starting biomass and compositions
 
-Transect data on average found starting willow biomass to increase with height (P = `r biomasspval`) class with average availability being `r biomass[height == "low", round(mean(Biomass), 1)]`, `r biomass[height == "medium", round(mean(Biomass), 1)]`, and `r biomass[height == "high", round(mean(Biomass), 1)]` g for the low, medium, and high heights, respectively. Willow twigs were an average of `r comps[Nutrient == "CP", round(mean(Percent), 1)]`% CP and `r comps[Nutrient == "NDF", round(mean(Percent), 1)]`% NDF, with a remainder of `r comps[Nutrient == "Carb", round(mean(Percent, 1))]`% non-fiber carbohydrate. Within fibre, willow had an average composition of `r comps[Nutrient == "ADF", round(mean(Percent, 1))]`% ADF and `r comps[Nutrient == "ADL", round(mean(Percent, 1))]`% ADL. CP composition did not vary between heights (P = `r cppval`). NDF decreased with willow height (P = `r ndfpval`) from `r comps[Nutrient == "NDF" & height == "low", round(mean(Percent), 1)]`% observed in the low height class to `r comps[Nutrient == "NDF" & height == "high", round(mean(Percent), 2)]`% in the high height class. As a result, carbohydrate composition also increased `rcarbh - carbh`% from low to high height class (P = `r carbpval`). ADF slightly decreased, with a change of `r adfl - adfh`% from low to high height class (P = `r adfpval`), while ADL increased `r adlh - adll`% (P = `r adlpval`).
+Transect data on average found starting willow biomass to increase with height (P = `r biomasspval`) class with average availability being `r biomass[height == "low", round(mean(Biomass), 1)]`, `r biomass[height == "medium", round(mean(Biomass), 1)]`, and `r biomass[height == "high", round(mean(Biomass), 1)]` g for the low, medium, and high heights, respectively. Willow twigs were an average of `r comps[Nutrient == "CP", round(mean(Percent), 1)]`% CP and `r comps[Nutrient == "NDF", round(mean(Percent), 1)]`% NDF, with a remainder of `r comps[Nutrient == "Carb", round(mean(Percent, 1))]`% non-fiber carbohydrate. Within fibre, willow had an average composition of `r comps[Nutrient == "ADF", round(mean(Percent, 1))]`% ADF and `r comps[Nutrient == "ADL", round(mean(Percent, 1))]`% ADL. CP composition did not vary between heights (P = `r cppval`). NDF decreased with willow height (P = `r ndfpval`) from `r comps[Nutrient == "NDF" & height == "low", round(mean(Percent), 1)]`% observed in the low height class to `r comps[Nutrient == "NDF" & height == "high", round(mean(Percent), 2)]`% in the high height class. As a result, carbohydrate composition also increased `r carbh - carbl`% from low to high height class (P = `r carbpval`). ADF slightly decreased, with a change of `r adfl - adfh`% from low to high height class (P = `r adfpval`), while ADL increased `r adlh - adll`% (P = `r adlpval`).
 
 
 ## Snow depth and twig availability over winter
