--- a/results_no_composition.Rmd
+++ b/results_no_composition.Rmd
@@ -42,4 +42,4 @@ Transect data on average found starting willow biomass to increase with height (
 
 GAMs that modeled willow availability in response to snow depth found that PTA behaved non-linearly in response to snow depth for all height classes (edf > 2; Table 1). Low PTA decreased exponentially with snow, as expected, becoming 0% available at roughly 50 cm of snow, or the maximum height of the low twig category (edf = `r round(sumlow$edf, 1)`, P < 0.001, R2 = `r round(sumlow$r.sq, 2)`). Medium twigs showed an inverted, quadratic response, increasing in availability up to `r pred[height == "medium" & Snow == 30, round(prop*100)]`% at 30 cm of snow, after which availability decreased until they became nearly 0% available after around 75 cm of snow (edf = `r round(summed$edf, 1)`, R2 = `r round(summed$r.sq, 2)`). High PTA was the most difficult to predict (R2 = `r round(sumhigh$r.sq, 2)`). These branches were easily pushed down by snow, and then covered quickly as snow continued to accumulate. As snow melted, they would become temporarily available for a few days before springing back to > 1 m when enough snow melted (edf = `r round(sumhigh$edf, 1)`). As a result, high twigs rarely surpassed 50% in availability.
 
-After we converted predictions for PTAs to total available biomass (g/m2), our findings matched our predictions. We found that from zero to 90 cm of snow, the total biomass of willow available to hares decreased from `r food_pred[Snow == 0, round(biomassavail, 1)]` to `r food_pred[Snow == max(Snow), round(biomassavail, 1)]` g/m2. However, this trend was very non-linear; available biomass peaked at mid ranges of snow, as we predicted. Specifically, we found that as snow increased from 0 to 10 cm available biomass increased by `r round((food_pred[Snow == 10, biomassavail] - food_pred[Snow == 0, biomassavail])/food_pred[Snow == 0, biomassavail]*100, 1)`% of what was available pre-snow, up to `r food_pred[Snow == max(Snow), round(biomassavail, 1)]`g/m2. Available biomass remained high until 30 cm after which it declined steadily until the maxmimum snow depth.
+After we converted predictions for PTAs to total available biomass (g/m2), our findings matched our predictions. We found that from zero to 90 cm of snow, the total biomass of willow available to hares decreased `r round((food_pred[Snow == 0, biomassavail] - food_pred[Snow == max(Snow), biomassavail])/food_pred[Snow == 0, biomassavail]*100)`%, from `r food_pred[Snow == 0, round(biomassavail, 1)]` to `r food_pred[Snow == max(Snow), round(biomassavail, 1)]` g/m2. However, this trend was very non-linear; available biomass peaked at mid ranges of snow, as we predicted. Specifically, we found that as snow increased from 0 to 10 cm available biomass increased by `r round((food_pred[Snow == 10, biomassavail] - food_pred[Snow == 0, biomassavail])/food_pred[Snow == 0, biomassavail]*100, 1)`% of what was available pre-snow, up to `r food_pred[Snow == max(Snow), round(biomassavail, 1)]`g/m2. Available biomass remained high until 30 cm after which it declined steadily until the maxmimum snow depth.
