--- a/results.Rmd
+++ b/results.Rmd
@@ -59,6 +59,6 @@ The maximum snow depth recorded was `r cams[, max(Snow, na.rm = TRUE)]` cm in bo
 
 GAMs that modeled willow availability in response to snow depth found that PTA behaved non-linearly in response to snow depth for all height classes (edf > 2; Table 1). Low PTA decreased exponentially with snow, as expected, becoming 0% available at roughly 50 cm of snow, or the maximum height of the low twig category (edf = `r round(sumlow$edf, 1)`, P < 0.001, R2 = `r round(sumlow$r.sq, 2)`). Medium twigs showed an inverted, quadratic response, increasing in availability up to `r pred[height == "medium" & Snow == 30, round(prop*100)]`% at 30 cm of snow, after which availability decreased until they became nearly 0% available after around 75 cm of snow (edf = `r round(summed$edf, 1)`, R2 = `r round(summed$r.sq, 2)`). PTA for the high height class was the most difficult to predict (R2 = `r round(sumhigh$r.sq, 2)`). These branches were easily pushed down by snow, and then covered quickly as snow continued to accumulate. As snow melted, they would become available for a few days before springing back out of hare reach when enough snow melted (edf = `r round(sumhigh$edf, 1)`). As a result, high twigs rarely surpassed 50% in availability.
 
-After we converted predictions for PTAs in response to snow depth to total available biomass (g/m2), average solubility (%), we found that total biomass of willow available to hares decreased `r round((food_pred[Snow == 0, biomassavail] - food_pred[Snow == max(Snow), biomassavail])/food_pred[Snow == 0, biomassavail]*100)`%, from `r food_pred[Snow == 0, round(biomassavail, 1)]` to `r food_pred[Snow == max(Snow), round(biomassavail, 1)]` g/m2 over the range of snow depths observed (Figure 5). However, this trend was non-linear with available biomass peaking when snow was `r food_pred[biomassavail == max(biomassavail), Snow]` cm deep. Specifically, we found that as snow increased from 0 to 10 cm, biomass available to hares increased by `r round((food_pred[Snow == 10, biomassavail] - food_pred[Snow == 0, biomassavail])/food_pred[Snow == 0, biomassavail]*100, 1)`% to a maximum of `r food_pred[Snow == 10, round(biomassavail, 1)]`g/m2. Available biomass remained high until 30 cm after which it declined steadily to a low `r food_pred[, round(min(biomassavail), 1)]` g/m2 at `r food_pred[biomassavail == min(biomassavail), Snow]` cm of snow. Over the same increase in snow, twig solubility increased f `r round(food_pred[Snow == max(Snow), NDSavail_comp] - food_pred[Snow == 0, NDSavail_comp], 1)`% in a nearly linear fashion. The change in twig solubility was not great enough to produce a difference in shape of the responses between biomass and soluble biomass to snow (Figure 5).
+After we converted predictions for PTAs in response to snow depth to total available biomass (g/m2), average solubility (%), we found that total biomass of willow available to hares decreased `r round((food_pred[Snow == 0, biomassavail] - food_pred[Snow == max(Snow), biomassavail])/food_pred[Snow == 0, biomassavail]*100)`%, from `r food_pred[Snow == 0, round(biomassavail, 1)]` to `r food_pred[Snow == max(Snow), round(biomassavail, 1)]` g/m2 over the range of snow depths observed (Figure 5A). However, this trend was non-linear with available biomass peaking when snow was `r food_pred[biomassavail == max(biomassavail), Snow]` cm deep. Specifically, we found that as snow increased from 0 to 10 cm, biomass available to hares increased by `r round((food_pred[Snow == 10, biomassavail] - food_pred[Snow == 0, biomassavail])/food_pred[Snow == 0, biomassavail]*100, 1)`% to a maximum of `r food_pred[Snow == 10, round(biomassavail, 1)]`g/m2. Available biomass remained high until 30 cm after which it declined steadily to a low `r food_pred[, round(min(biomassavail), 1)]` g/m2 at `r food_pred[biomassavail == min(biomassavail), Snow]` cm of snow. Over the same increase in snow, twig solubility increased f `r round(food_pred[Snow == max(Snow), NDSavail_comp] - food_pred[Snow == 0, NDSavail_comp], 1)`% in a nearly linear fashion. The change in twig solubility (Figure 5B) was not great enough to produce a difference in shape of the responses between biomass and soluble biomass to snow (Figure 5C).
 
 
